# bioshake

./: .gitattributes  .gitignore  Bioshake.hs  LICENSE  README.md  bioshake.cabal  default.nix  edam-to-map.awk  shell.nix  stack.yaml
Bioshake/: ADTEx.hs  BWA.hs  Bedtools.hs  CNVkit.hs  ContextMap.hs  Cutadapt.hs  EDAM.hs  FREEC.hs  Facets.hs  GATK.hs  Gridss.hs  Hisat2.hs  Implicit.hs  Kallisto.hs  Octopus.hs  Picard.hs  Platypus.hs  Samtools.hs  Sequenza.hs  SnpEff.hs  SomaticSniper.hs  Strelka.hs  TH.hs  Tags.hs  Types.hs  Varscan.hs
Bioshake/Cluster/: ADTEx.hs  BWA.hs  Bedtools.hs  CNVkit.hs  Cutadapt.hs  FREEC.hs  GATK.hs  Gridss.hs  Hisat2.hs  Kallisto.hs  Octopus.hs  Picard.hs  Platypus.hs  Samtools.hs  Sequenza.hs  SnpEff.hs  SomaticSniper.hs  Strelka.hs  Torque.hs  Varscan.hs
Bioshake/Internal/: ADTEx.hs  BWA.hs  Bedtools.hs  CNVkit.hs  ContextMap.hs  Cutadapt.hs  FREEC.hs  Facets.hs  GATK.hs  Gridss.hs  Hisat2.hs  Kallisto.hs  Octopus.hs  Picard.hs  Platypus.hs  Samtools.hs  Sequenza.hs  SnpEff.hs  SomaticSniper.hs  Strelka.hs  Varscan.hs
doc/: haskell.sty  paper.tex
docs/: Bioshake-ADTEx.html  Bioshake-BWA.html  Bioshake-Bedtools.html  Bioshake-Cluster-ADTEx.html  Bioshake-Cluster-BWA.html  Bioshake-Cluster-Bedtools.html  Bioshake-Cluster-Cutadapt.html  Bioshake-Cluster-FREEC.html  Bioshake-Cluster-Picard.html  Bioshake-Cluster-Platypus.html  Bioshake-Cluster-Samtools.html  Bioshake-Cluster-Sequenza.html  Bioshake-Cluster-SnpEff.html  Bioshake-Cluster-Torque.html  Bioshake-Cluster-Varscan.html  Bioshake-Cutadapt.html  Bioshake-FREEC.html  Bioshake-Implicit.html  Bioshake-Picard.html  Bioshake-Platypus.html  Bioshake-Samtools.html  Bioshake-Sequenza.html  Bioshake-SnpEff.html  Bioshake-TH.html  Bioshake-Tags.html  Bioshake-Types.html  Bioshake-Varscan.html  Bioshake.html  bioshake.haddock  bioshake.txt  doc-index.html  index.html  mini_Bioshake-ADTEx.html  mini_Bioshake-BWA.html  mini_Bioshake-Bedtools.html  mini_Bioshake-Cluster-ADTEx.html  mini_Bioshake-Cluster-BWA.html  mini_Bioshake-Cluster-Bedtools.html  mini_Bioshake-Cluster-Cutadapt.html  mini_Bioshake-Cluster-FREEC.html  (+20 more)
docs/src/: Bioshake-ADTEx.html  Bioshake-BWA.html  Bioshake-Bedtools.html  Bioshake-Cluster-ADTEx.html  Bioshake-Cluster-BWA.html  Bioshake-Cluster-Bedtools.html  Bioshake-Cluster-Cutadapt.html  Bioshake-Cluster-FREEC.html  Bioshake-Cluster-Picard.html  Bioshake-Cluster-Platypus.html  Bioshake-Cluster-Samtools.html  Bioshake-Cluster-Sequenza.html  Bioshake-Cluster-SnpEff.html  Bioshake-Cluster-Torque.html  Bioshake-Cluster-Varscan.html  Bioshake-Cutadapt.html  Bioshake-FREEC.html  Bioshake-Implicit.html  Bioshake-Internal-ADTEx.html  Bioshake-Internal-BWA.html  Bioshake-Internal-Bedtools.html  Bioshake-Internal-Cutadapt.html  Bioshake-Internal-FREEC.html  Bioshake-Internal-Picard.html  Bioshake-Internal-Platypus.html  Bioshake-Internal-Samtools.html  Bioshake-Internal-Sequenza.html  Bioshake-Internal-SnpEff.html  Bioshake-Internal-Varscan.html  Bioshake-Picard.html  Bioshake-Platypus.html  Bioshake-Samtools.html  Bioshake-Sequenza.html  Bioshake-SnpEff.html  Bioshake-TH.html  Bioshake-Tags.html  Bioshake-Types.html  Bioshake-Varscan.html  Bioshake.html
examples/: README  nextflow-blast.lhs  ref.fa  sample1-1.fq  sample1-2.fq  sample2-1.fq  sample2-2.fq  simple.lhs
