name:                bioshake
version:             0.1.0.0
synopsis:            Bioinformatics pipelines with shake
-- description:         
license:             ISC
license-file:        LICENSE
author:              Justin Bedo
maintainer:          cu@cua0.org
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Bioshake
                     , Bioshake.ADTEx
                     , Bioshake.Bedtools
                     , Bioshake.BWA
                     , Bioshake.Cluster.ADTEx
                     , Bioshake.Cluster.Bedtools
                     , Bioshake.Cluster.BWA
                     , Bioshake.Cluster.Cutadapt
                     , Bioshake.Cluster.FREEC
                     , Bioshake.Cluster.Gridss
                     , Bioshake.Cluster.Picard
                     , Bioshake.Cluster.Platypus
                     , Bioshake.Cluster.Samtools
                     , Bioshake.Cluster.Sequenza
                     , Bioshake.Cluster.SnpEff
                     , Bioshake.Cluster.Torque
                     , Bioshake.Cluster.Varscan
                     , Bioshake.Cutadapt
                     , Bioshake.Facets
                     , Bioshake.FREEC
                     , Bioshake.Gridss
                     , Bioshake.Implicit
                     , Bioshake.Picard
                     , Bioshake.Platypus
                     , Bioshake.Samtools
                     , Bioshake.Sequenza
                     , Bioshake.SnpEff
                     , Bioshake.Tags
                     , Bioshake.TH
                     , Bioshake.Types
                     , Bioshake.Varscan
  other-modules:       Bioshake.Internal.ADTEx
                     , Bioshake.Internal.Bedtools
                     , Bioshake.Internal.BWA
                     , Bioshake.Internal.Cutadapt
                     , Bioshake.Internal.Facets
                     , Bioshake.Internal.FREEC
                     , Bioshake.Internal.Gridss
                     , Bioshake.Internal.Picard
                     , Bioshake.Internal.Platypus
                     , Bioshake.Internal.Samtools
                     , Bioshake.Internal.Sequenza
                     , Bioshake.Internal.SnpEff
                     , Bioshake.Internal.Varscan

  other-extensions:    DataKinds
                     , DeriveFunctor
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , KindSignatures
                     , MultiParamTypeClasses
                     , Rank2Types
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TypeOperators
                     , TypeSynonymInstances
                     , UndecidableInstances
                     , ViewPatterns
  build-depends:       base >=4.9 && <4.10
                     , binary >=0.8 && <0.9
                     , bytestring >=0.10 && <0.11
                     , containers >=0.5 && <0.6
                     , cryptonite
                     , directory >=1.2 && <1.4
                     , free
                     , mtl
                     , shake
                     , split
                     , template-haskell >=2.11 && <2.12
                     , temporary
                     , transformers >=0.5 && <0.6
                     , unix >=2.7 && <2.8
  -- hs-source-dirs:      
  default-language:    Haskell2010
