name:                bioshake
version:             0.1.0.0
synopsis:            Bioinformatics pipelines with shake
-- description:         
license:             ISC
license-file:        LICENSE
author:              Justin Bedo
maintainer:          cu@cua0.org
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Bioshake
                     , Bioshake.ADTEx
                     , Bioshake.BWA
                     , Bioshake.Bedtools
                     , Bioshake.CNVkit
                     , Bioshake.Cluster.ADTEx
                     , Bioshake.Cluster.BWA
                     , Bioshake.Cluster.Bedtools
                     , Bioshake.Cluster.CNVkit
                     , Bioshake.Cluster.Cutadapt
                     , Bioshake.Cluster.FREEC
                     , Bioshake.Cluster.Gridss
                     , Bioshake.Cluster.Kallisto
                     , Bioshake.Cluster.Hisat2
                     , Bioshake.Cluster.Octopus
                     , Bioshake.Cluster.Picard
                     , Bioshake.Cluster.Platypus
                     , Bioshake.Cluster.Samtools
                     , Bioshake.Cluster.Sequenza
                     , Bioshake.Cluster.SnpEff
                     , Bioshake.Cluster.SomaticSniper
                     , Bioshake.Cluster.Strelka
                     , Bioshake.Cluster.Torque
                     , Bioshake.Cluster.Varscan
                     , Bioshake.Cutadapt
                     , Bioshake.EDAM
                     , Bioshake.FREEC
                     , Bioshake.Facets
                     , Bioshake.Gridss
                     , Bioshake.Kallisto
                     , Bioshake.Hisat2
                     , Bioshake.Octopus
                     , Bioshake.Picard
                     , Bioshake.Platypus
                     , Bioshake.Samtools
                     , Bioshake.Sequenza
                     , Bioshake.SnpEff
                     , Bioshake.SomaticSniper
                     , Bioshake.Strelka
                     , Bioshake.TH
                     , Bioshake.Tags
                     , Bioshake.Types
                     , Bioshake.Varscan
  other-modules:       Bioshake.Internal.ADTEx
                     , Bioshake.Internal.BWA
                     , Bioshake.Internal.Bedtools
                     , Bioshake.Internal.CNVkit
                     , Bioshake.Internal.Cutadapt
                     , Bioshake.Internal.Hisat2
                     , Bioshake.Internal.FREEC
                     , Bioshake.Internal.Facets
                     , Bioshake.Internal.Gridss
                     , Bioshake.Internal.Kallisto
                     , Bioshake.Internal.Octopus
                     , Bioshake.Internal.Picard
                     , Bioshake.Internal.Platypus
                     , Bioshake.Internal.Samtools
                     , Bioshake.Internal.Sequenza
                     , Bioshake.Internal.SnpEff
                     , Bioshake.Internal.SomaticSniper
                     , Bioshake.Internal.Strelka
                     , Bioshake.Internal.Varscan

  other-extensions:    DataKinds
                     , DeriveFunctor
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , KindSignatures
                     , MultiParamTypeClasses
                     , Rank2Types
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TypeOperators
                     , TypeSynonymInstances
                     , UndecidableInstances
                     , ViewPatterns
  build-depends:       base >=4.9 && <4.12
                     , binary >=0.8 && <0.9
                     , bytestring >=0.10 && <0.11
                     , containers >=0.5 && <0.6
                     , cryptonite >= 0.25 && < 0.26
                     , directory >=1.2 && <1.4
                     , free >= 5.0 && < 5.2
                     , mtl >= 2.2.2 && < 2.3
                     , shake >= 0.16.4 && < 0.17
                     , split >= 0.2.3 && < 0.3
                     , template-haskell >=2.11 && <2.14
                     , temporary >= 1.3 && < 1.4
                     , transformers >=0.5 && <0.6
                     , unix >=2.7 && <2.8
                     , reflection >= 2.1.4 && < 2.2
  -- hs-source-dirs:      
  default-language:    Haskell2010
